Fix alignment of hamberger bar

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -46,7 +46,7 @@
 /* Hamburger Menu */
 .hamburger-menu-container {
   position: relative;
-  z-index: 1000;
+  z-index: 10;
 }
 
 .hamburger {
